--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,12 @@
     "Trading"
   ],
   "author": "Reotech",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2",
+    "nodemon": "^2.0.22"
+  }
 }
